example-applications/guestbook/08-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: guestbook-example
  labels:
    app: guestbook
    tier: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: guestbook
    tier: frontend
