example-applications/guestbook/09-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: guestbook-example
spec:
  rules:
    - host: guestbook.local
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
